--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+    "@types/jest": "^26.0.24",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.6",
+    "pleasantest": "^1.0.0",
+    "rollup-plugin-vue": "^6.0.0",
     "vite": "^2.4.4"
   }
 }
